// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSwitch should render correctly with an error label 1`] = `
<div
  className="MuiFormGroup-root rows css-dmmspl-MuiFormGroup-root"
>
  <div
    className="columns"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 color-disabled margin-right-xs css-ahj2mt-MuiTypography-root"
    >
      leftLabel
    </p>
    <label
      className="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          aria-disabled={true}
          className="MuiSwitch-switchBase MuiSwitch-colorSecondary Mui-checked Mui-disabled MuiButtonBase-root Mui-disabled MuiSwitch-switchBase MuiSwitch-colorSecondary Mui-checked Mui-disabled PrivateSwitchBase-root Mui-checked Mui-disabled css-priqlz-MuiButtonBase-root-MuiSwitch-switchBase"
          data-testid="just-a-test-id"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
        >
          <input
            checked={true}
            className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
            disabled={true}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
        </span>
        <span
          className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-ahj2mt-MuiTypography-root"
      >
        rightLabel
      </span>
    </label>
  </div>
  <span
    className="MuiTypography-root MuiTypography-caption css-19m5e5t-MuiTypography-root"
    data-testid="just-a-test-id__error-label"
  >
    test-error-label
  </span>
</div>
`;

exports[`CustomSwitch should render correctly with just the minimal props 1`] = `
<div
  className="MuiFormGroup-root rows css-dmmspl-MuiFormGroup-root"
>
  <div
    className="columns"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 margin-right-xs css-ahj2mt-MuiTypography-root"
    >
      anotherLeftLabel
    </p>
    <label
      className="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
    >
      <span
        className="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          className="MuiSwitch-switchBase MuiSwitch-colorSecondary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-root css-priqlz-MuiButtonBase-root-MuiSwitch-switchBase"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <input
            className="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
      <span
        className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ahj2mt-MuiTypography-root"
      >
        anotherRightLabel
      </span>
    </label>
  </div>
</div>
`;
